# texturegen-gui

./: Cargo.toml
src/: dag.rs  events.rs  fonts.rs  main.rs  math.rs  process.rs
src/graphics/: fonts.rs  mod.rs  renderer.rs
src/process/: combiners.rs  inputs.rs  mod.rs
src/shader/: mod.rs
